# Analysis

./: .gitignore  .gitmodules  CTRLMain.m  DYNMain.m  FLIGHTcontrol.m  FLIGHTdynamics.m  FlightDynamics.prj  FlightDynamicsApp.m  LICENSE  Main.m  NodeTypeEnumeration.xlsx  README.md  SESSION_NOTES.md  WARP.md  pyproject.toml  startup.m  startup_project.m
+FilterDesign/: clearPlotAxes.m  getFilterDpVals.m  getLLFilter1stOrder2.m  getLLFilter2ndOrder1.m  initgui.m  optLL2ndOrder.m  plotFilter.m  plotInfo.m  setFilterDpVals.m  setStringUnits.m  updateDpMinMax.m  updateSliderDpVals.m  xNichols_GS.m  xset_legend.m
+Utilities/: SplashScreen.m  SplashScreenController.m  appendLineInFile.m  appendReplaceLineInFile.m  cat1D.m  catstruct.m  cell2mfile.m  createGUI.m  createShortcut.m  enforceMinimumFigureSize.m  find_in_models.m  formatDialogMessage.m  getNamesFromModel.m  getParentFigure.m  multiWaitbar.m  nestedstructs.m  operCondCompare.m  operCondConvert_HJ.m  operCondConvert_MB.m  questdlgNonModal.m  releaseWaitPtr.m  rowcat.m  saveProjectGUI.m  setMinFigureSize.m  setWaitPtr.m  splitCell.m  write2mfileCtrl.m  write2string.m  writeGain2mfile.m  writeScattGainObj2mfile.m
@Application/: Application.m
@Report/: Report.m
@SimMacLib/: SimMacLib.m
ControlDesign/: .gitignore  README.md  requirements.txt
Documentation/: ACD FLIGHT Dynamics - Installation.pptx  Create App for Customer - Instructions.pptx  Creating a Simulation object.docx
matlab_core/: FLIGHTdynamics.m  License Instructions.docx  Main.m
pyapp/: __init__.py  app.py  main.py  mainwindow.py  (+1 more)
(+1428 files in other folders)
