[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-stability-ui"
version = "0.1.0"
description = "PySide6 port of the Stability Control MATLAB UI"
readme = "README.md"
authors = [
    { name = "Analysis Migration" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "pytest>=7.4",
    "pytest-qt>=4.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.3",
    "isort>=5.12",
]

[tool.pytest.ini_options]
qt_log_level = "CRITICAL"
addopts = "-ra"
