[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-qt"
version = "0.1.0"
description = "Qt Quick front-end for MATLAB stability analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Mangano Consulting"}
]
dependencies = [
  "PySide6>=6.6",
  "qasync>=0.24.0",
  "numpy>=1.24",
  "scipy>=1.9",
  "pytest>=7.4"
]

[project.optional-dependencies]
dev = [
  "pytest-qt>=4.3",
  "matplotlib>=3.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyapp*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
